<resources>
    <string name="app_name">deltahacks2</string>
    <string name="Input" />
    <string name="input">input</string>
    <string name="title_activity_abcd">ABCD</string>
    <string name="title_activity_commands">Commands</string>
    <string name="title_activity_phrases">Phrases</string>
    <string name="title_activity_type">type</string>
    <string name="commands">Commands</string>
    <string name="phrases">Phrases</string>
    <string name="_abc">_abc</string>
    <string name="defg">defg</string>
    <string name="hijk">hijk</string>
    <string name="lmno">lmno</string>
    <string name="pqrs">pqrs</string>
    <string name="tuvw">tuvw</string>
    <string name="xyz">xyz</string>
    <string name="number">0123</string>
    <string name="title_activity__abc_buttons">_abcButtons</string>
    <string name="Space">Space</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name="F">F</string>
    <string name="G">G</string>
    <string name="H">H</string>
    <string name="I">I</string>
    <string name="J">J</string>
    <string name="K">K</string>
    <string name="L">L</string>
    <string name="M">M</string>
    <string name="N">N</string>
    <string name="O">O</string>
    <string name="P">P</string>
    <string name="Q">Q</string>
    <string name="R">R</string>
    <string name="S">S</string>
    <string name="T">T</string>
    <string name="U">U</string>
    <string name="V">V</string>
    <string name="W">W</string>
    <string name="X">X</string>
    <string name="Y">Y</string>
    <string name="Z">Z</string>
    <string name="title_activity_defg">defgActivity</string>
    <string name="title_activity_defg_and_hijk">defgAndHijk</string>


</resources>
