<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="._abcButtons"
    tools:showIn="@layout/activity_defg_buttons">

    <TextView
        android:id="@+id/inputText"
        android:layout_width="669dp"
        android:layout_height="49dp"
        android:layout_marginStart="53dp"
        android:text="@string/input"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="732dp"
        android:layout_height="335dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonH"
            android:layout_width="360dp"
            android:layout_height="154dp"
            android:text="@string/H"
            android:textSize="36sp"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/buttonI"
            android:layout_width="360dp"
            android:layout_height="154dp"
            android:text="@string/I"
            android:textSize="36sp"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/buttonJ"
            android:layout_width="360dp"
            android:layout_height="154dp"
            android:text="@string/J"
            android:textSize="36sp"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/buttonK"
            android:layout_width="360dp"
            android:layout_height="154dp"
            android:text="@string/K"
            android:textSize="36sp"
            app:layout_column="1"
            app:layout_row="2" />

    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>