<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TypeActivity">

    <TextView
        android:id="@+id/typeText"
        android:layout_width="669dp"
        android:layout_height="49dp"
        android:layout_marginStart="53dp"
        android:text="@string/input"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="732dp"
        android:layout_height="335dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputText">

        <Button
            android:id="@+id/button1"
            android:layout_width="353dp"
            android:layout_height="330dp"
            android:text="@string/_abc"
            android:textSize="36sp"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/button3"
            android:layout_width="346dp"
            android:layout_height="330dp"
            android:text="@string/defg"
            android:textSize="36sp"
            app:layout_column="2"
            app:layout_row="1" />

    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>